Test/typing/should_fail/methods_abstract_static..java
package tutu.titi.toto;

abstract class A {

    abstract static void myMethod(){}

}